--- a/src/index.scss
+++ b/src/index.scss
@@ -24,9 +24,14 @@ a{
   text-decoration: none;
   color: inherit;
 }
+
 body {
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
+}
+.icon {
+  width: 1em;
+  height: 1em;
 }
 
