完成label页面样式

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,3 +48,8 @@ button {
   clear: both;
   display: block;
 }
+.oneLine {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
