--- a/src/index.scss
+++ b/src/index.scss
@@ -16,19 +16,24 @@
 *::after {
   box-sizing: border-box;
 }
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: $font-hei;
-  font-size: 14px;
-  line-height: 1.2;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #232428;
+  background: #f4f0ef;
 }
 
 input {
@@ -40,7 +45,7 @@ button {
   border: none;
   font-family: inherit;
 }
-.clearfix::after{
+.clearfix::after {
   content: "";
   clear: both;
   display: block;
